# fastlingo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
fastlingo/: main.py
fastlingo/core/: cache.py  cache_lru.py  config.py  double_linked_list.py  exceptions.py  field.py  fileio.py  language.py  language_utils.py  logger.py  translations_cache.py  translator.py  utils.py
fastlingo/translate_services/: __init__.py  translate.py  translate_factory.py  translate_google.py  translate_service.py
